--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@tailwind screens {
+  'sm':640px ;
+  'md':768px ;
+  'lg':1024px ;
+  'xl':1280px ;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media (min-width: 768px) {
+  /* mobile 이상 디바이스 */
+
+  .h-screen {
+    max-width: 30%;
+    margin: 0 auto;
+    background-color: #f3c038;
+  }
+}
+
+@media (max-width: 1155px) {
+  /*  mobile+pad 버전 */
+
+  .h-screen {
+    max-width: 100%;
+    margin: 0 auto;
+    background-color: #4299e1; /* 파란색 */
+  }
 }
