--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,19 @@
   'xl':1280px ;
 }
 
+@font-face {
+  font-family: "Ownglyph_meetme-Rg";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2402_1@1.0/Ownglyph_meetme-Rg.woff2")
+    format("woff2");
+}
+
+* {
+  font-family: "Ownglyph_meetme-Rg";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 1.3rem;
+}
+
 @media (min-width: 768px) {
   /* mobile 이상 디바이스 */
 
