feat: 공통 버튼 클래스통일, 고정 색상수정

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,13 @@ body {
   user-select: none;
 }
 
+@layer components{
+  .my_btn {
+    @apply bg-white text-sm p-2 rounded text-black
+  }
+}
+
+
 @media (min-width: 768px) {
   /* mobile 이상 디바이스 */
 
